# optal

./: README.md  optal.cabal  stack.yaml
src/: Compiler.hs  Decompiler.hs  Evaluate.hs  Examples.hs  InteractionNet.hs  Term.hs  Utils.hs
test/: Test.hs
test/Test/: Compiler.hs  Generators.hs  SimpleExamples.hs
