name:                optal
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             GPL-3
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
category:            Languages, Compilers
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , mtl
                     , transformers
  exposed-modules:     Compiler
                     , Examples
                     , InteractionNet
                     , Term
  other-modules:       Utils
