name:                optal
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             GPL-3
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
category:            Languages, Compilers
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , mtl
                     , transformers
  exposed-modules:     Compiler
                     , Decompiler
                     , Evaluate
                     , Examples
                     , InteractionNet
                     , Term
  other-modules:       Utils


test-suite Test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
  other-modules:       Test.SimpleExamples
  build-depends:       base >= 4.7 && < 5
                     , tasty
                     , optal
                     , tasty-hunit
                     , tasty-quickcheck
                     , QuickCheck